# statviz.py

./: .gitignore  README.md  frv.py  function.txt  functions_of_random_variables.py  generated_data.txt  gui.py  helpers.py  input.txt  joint_random_variables.py  jrv.py  maingui.py  random_variables.py  requirements.txt  rv.py  samples.txt  single_random_variable.py  test_generator.py
UI/: Main Window.ui
gui/: main.py
src/: main.py  pyproject.toml  requirements.txt  single_random_variable.py  test_generator.py
src/analysis/: functions_of_random_variables.py  helpers.py  joint_random_variables.py  single_random_variable.py  utils.py
src/gui/: gui.py
src/statviz/: __main__.py
src/statviz/analysis/: functions_of_random_variables.py  joint_random_variables.py  single_random_variable.py  test_generator.py
ui/: main.ui
