[tool.poetry]
name = "statviz"
version = "0.1.1"
description = ""
authors = ["salastro <salah2112004@gmail.com>"]
readme = "README.md"
packages = [{include = "statviz"}]

[tool.poetry.dependencies]
python = "^3.10"
sympy = "^1.13.2"
numpy = "2.2.0"
matplotlib = "^3.9.0"
scipy = "^1.14.0"
pyqt6="*"

[tool.poetry.scripts]
statviz = "statviz.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
